--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Portfolio</h2>
-            <p>Em construção</p>
+            <p>Em desenvolvimento</p>
           </div>
 
           <div class="row aos-init aos-animate" data-aos="fade-up">
