--- a/index.html
+++ b/index.html
@@ -156,14 +156,6 @@
         <div class="container">
           <div class="section-title">
             <h2>Sobre mim</h2>
-            <p>
-              Sou iniciante na área de TI e atualmente busco construir uma boa
-              base de conhecimentos em Desenvolvimento Front-End usando HTML5,
-              CSS3, JavaScript, Bootstrap e além de outros frameworks e
-              bibliotecas ultilizados. Tenho um perfil proativo, flexível,
-              dedicado, objetivo, com extrema facilidade de aprender, trabalhar
-              em equipe e em busca de desafios.
-            </p>
           </div>
 
           <div class="row">
@@ -212,6 +204,14 @@
                   </ul>
                 </div>
               </div>
+              <p>
+                Sou iniciante na área de TI e atualmente busco construir uma boa
+                base de conhecimentos em Desenvolvimento Front-End usando HTML5,
+                CSS3, JavaScript, Bootstrap e além de outros frameworks e
+                bibliotecas ultilizados. Tenho um perfil proativo, flexível,
+                dedicado, objetivo, com extrema facilidade de aprender,
+                trabalhar em equipe e em busca de desafios.
+              </p>
             </div>
           </div>
         </div>
