--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </li>
             <li>
               <a href="#contact" class="nav-link scrollto"
-                ><i class="bx bx-envelope"></i> <span>Contacto</span></a
+                ><i class="bx bx-envelope"></i> <span>Contato</span></a
               >
             </li>
           </ul>
