--- a/index.html
+++ b/index.html
@@ -499,19 +499,22 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/Capa.svg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.jpg"
+                    href="assets/img/portfolio/Capa.svg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 1"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="https://nlw-copa-phi.vercel.app/"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -524,19 +527,22 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
+                  src="assets/img/portfolio/eSports.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-2.jpg"
+                    href="assets/img/portfolio/eSports.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Web 3"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="https://edusantos20.github.io/NLW_Esports/"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -549,19 +555,22 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
+                  src="assets/img/portfolio/logo.svg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-3.jpg"
+                    href="assets/img/portfolio/logo.svg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="App 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="https://edusantos20.github.io/semana-frontend-mundo-invertido-dio/"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -574,19 +583,21 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpg"
+                  src="assets/img/portfolio/crachar.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-4.jpg"
+                    href="assets/img/portfolio/crachar.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Card 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="https://edusantos20.github.io/crachar-nlw/"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -599,19 +610,22 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-5.jpg"
+                  src="assets/img/portfolio/finances.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-5.jpg"
+                    href="assets/img/portfolio/finances.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
                     title="Web 2"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="https://edusantos20.github.io/maratonaDev-Finances/"
+                    target="_blank"
+                    title="More Details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
